Suppress netty warnings and exceptions in debug mode (#926)
- Add appropriate module options in the manifest file in gradle build. 

Signed-off-by: Usman Saleem <usman@usmans.info>